faq spacing fix (hover but no click) removed 'get started' from nav

--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -1084,7 +1084,7 @@
           transition: 0.3s ease 0.12s;
 
           @include mq-max("xxl") {
-            padding: 16px 0 8px;
+            padding: 32px 0 12px;
           }
         }
       }
@@ -1099,7 +1099,7 @@
       z-index: 1;
 
       @include mq-max("xxl") {
-        padding: 4px 0;
+        padding: 12px 0;
       }
 
       h3 {
